# OCaml-Extensible-variant-types

OCamlExtensibleVariantTypes/: dune-project
OCamlExtensibleVariantTypes/lib/: dune
