(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Matvey Nazdruhin, Dmitry Sheiko")

(maintainers "Matvey Nazdruhin, Dmitry Sheiko")

(bug_reports "https://github.com/Kakadu/fp2024")

(homepage "https://github.com/Kakadu/fp2024")

(package
 (name OCamlExtensibleVariantTypes) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "OCaml interpreter with algebraic types replaced with extensible options")
 (description
  "OCaml interpreter with algebraic types replaced with extensible options")
 (documentation "https://kakadu.github.io/fp2024/docs/OCamlExtensibleVariantTypes")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files add the same dependecies here too
  ))
